<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#413e4f"
android:paddingTop="56dp"
android:paddingLeft="24dp"
android:paddingRight="24dp"
xmlns:android="http://schemas.android.com/apk/res/android">



<!--  Email Label -->

<EditText android:id="@+id/emailId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"
    android:hint="Email" />


<!--  Password Label -->

<EditText android:id="@+id/passwo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:hint="Password"/>


<android.support.v7.widget.AppCompatButton
    android:id="@+id/createaccount"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="24dp"
    android:padding="12dp"
    android:background="@drawable/mybutton"
    android:text="Create account"/>



</LinearLayout>
